--- a/Automated-Blog-v3.0/website/static/generateBlogStyle.css
+++ b/Automated-Blog-v3.0/website/static/generateBlogStyle.css
@@ -30,10 +30,9 @@
     border: 1px solid black;
     justify-content: center;
     padding: 10px; 
+    margin: 5px; 
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
-    margin: 40px;
-
   }
 
   input{
