--- a/Automated-Blog-v3.0/website/static/homeStyle.css
+++ b/Automated-Blog-v3.0/website/static/homeStyle.css
@@ -29,7 +29,9 @@
   
   main {
     margin-top: 5rem;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
   }
 
 
