--- a/Automated-Blog-v3.0/website/static/signInStyle.css
+++ b/Automated-Blog-v3.0/website/static/signInStyle.css
@@ -15,6 +15,7 @@
   }
   
   body {
+    overflow-x: hidden;
     color: black;
     background-color: white;
     margin: 0;
@@ -32,8 +33,6 @@
     padding: 10px; 
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
-    margin: 40px;
-
   }
 
   input{
