--- a/Automated-Blog-v3.0/website/static/signUpStyle.css
+++ b/Automated-Blog-v3.0/website/static/signUpStyle.css
@@ -29,10 +29,8 @@
     align-items: center;
     border: 1px solid black;
     justify-content: center;
-    padding: 10px; 
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
-    margin: 40px;
 
   }
 
