--- a/Automated-Blog-v3.0/website/static/style.css
+++ b/Automated-Blog-v3.0/website/static/style.css
@@ -9,10 +9,13 @@
   }
   
   body {
+    overflow-x: hidden;
     color: black;
     background-color: white;
     margin: 0;
     padding: 0; 
+    height: 100vh;
+    width: 100vw; 
   }
   
   body::-webkit-scrollbar {
@@ -37,7 +40,7 @@
     height: 100vh;
     position: fixed;
     background-color: var(--bg-primary);
-    top: 0;
+    bottom: 0;
     left: 0;
     z-index: 100;
   }
@@ -52,11 +55,15 @@
 
   }
   .side-navbar{
+    position: fixed;
     width: 0;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     transition: opacity 0.3s;
     transition: width 0.3s;
+    top: 0; 
+    bottom: 0;
+    height: 100%;
   }
 
   #close-button{
@@ -117,6 +124,10 @@
 
   .nav-item:last-child{
     margin-top: auto;
+  }
+
+  .content-container{
+    height: 100vh; 
   }
 
   
